* Wed Jun 3 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Changed all .frm file extensions to .3dd file extensions
- Registered frame3dd (.3dd) file extensions on filext.com

* Fri May 15 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090515
- Fixed bug in post-processor for deformed beam shapes
This bug fix occurs in lines 2668 - 2694 (function bent_beam) in frame3dd_io.c
- Re-ran example with May 15 2009 build

* Fri Apr 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090417
- Re-ran examples with April 17 2009 build
 
* Fri Apr 17 2009 John Pye <john.pye@anu.edu.au> 0.20090417
- Removed LinuxCommand PDF link in documentation.
- Removed little cmd prompt icons from documentation.
- New release on SF.net before new work on data structures commences.
- Reformatted changelog to PC format (may cause probs with RPM?)
- Removed wordy usage output from changelog (doesn't fit RPM formatting
requirements).

* Tue Mar 31 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090331
- Fixed bug in the Matlab interface function frame_3dd.m ... 
...no long printing the depricated anlyz variable value
- Frame3DD now writes the stiffness matrix to a file named "Ks" 
for each analysis. Line 460 of main.c ... after Newton-Raphson iterations 
for geometric nonlinear analysis, if such an analysis is to be performed.  
...for compatability with Matlab interface function frame_3dd.m
- re-ran example files

* Thu Mar 5 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090305 
- Remove "anlyz" from input data file format because the "-c"
command line option is now an easier and better way to specify
"data check only". Updated code, examples and documentation.
- Fixed bug related to "-q" flag and verbose output on line 1274 of frame3dd_io.c
- Added checks related to incorrect command-line arguments.
- Added an evaluation/interpretation of RMS relative equilibrium precision
within the code and updated the documentation.

* Wed Mar 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090304 