@@ -3,13 +3,13 @@
 
 <title>FRAME3DD User Manual</title>
 
-<META NAME="Description" CONTENT=" Free software for static and dynamic analysis of 3D moment-resisting frames with elastic and geometric stiffness. Written in
- C.  Source code includes:  frame analysis, LDL' decomposition, LU decomposition, sub-space iteration, Stodola iteration, Sturm eigenvalue checking,
+<META NAME="Description" CONTENT=" Free software for static and dynamic structural analysis of 3D moment-resisting frames with elastic and geometric stiffness. Written in ANSI C.  
+Source code includes:  frame analysis, LDL' decomposition, LU decomposition, sub-space iteration, Stodola iteration, Sturm eigenvalue checking,
 Static Condensation, Guyan Reduction and Dynamic Condensation.
 Matlab interface.
 Graphical output and mode shape animation via Gnuplot.">
 
-<META NAME="Keywords" CONTENT="Frame3DD, Structural Dynamics, Structural Analysis, Frame Analysis, Structural Analysis Software, Geometric Stiffness, Geometric Stiffness Matrix, Modal Analysis, Modal Analysis Software, Structural Dynamics, Structural Dynamics Software, LDL Decomposition, LDL Decomposition, LU Decomposition, Subspace Iteration, Gnuplot, Matlab, Octave, Henri Gavin, Duke">
+<META NAME="Keywords" CONTENT="Frame3DD, Structural Dynamics, Structural Analysis, Frame Analysis, 3D Frames, 3D Trusses, Structural Analysis Software, Geometric Stiffness, Geometric Stiffness Matrix, Modal Analysis, Modal Analysis Software, Structural Dynamics, Structural Dynamics Software, LDL Decomposition, LDL Decomposition, LU Decomposition, Subspace Iteration, Gnuplot, Matlab, Octave, Henri Gavin, Duke">
 
 <style>
 h1 {font: bold xx-large sans-serif}
@@ -57,15 +57,21 @@ Duke University</a> - Box 90287,
 <p><b>Frame3DD</b> is a program for the static and dynamic structural analysis of two- and three-dimensional frames and trusses with elastic and geometric stiffness.
 </p>
 
+<!-- 3D frames , 3D frames , 3D frames , 3D frames , 3D frames , 3D frames  -->
+
 <p><b>Frame3DD</b> is executed from the <a href="http://en.wikipedia.org/wiki/Windows_command_line">command prompt</a> (Windows) or <a href="http://en.wikipedia.org/wiki/Unix_shell">shell</a> (Linux) or <a href="http://www.macdevcenter.com/pub/a/mac/2001/12/14/terminal_one.html">terminal</a> (Mac), as follows, with filenames changed as required:
 <pre>
   frame3dd inputfile.3dd outputfile.txt
 </pre>
 </p>
 
+<!-- 3D frames , 3D frames , 3D frames , 3D frames , 3D frames , 3D frames  -->
+
 <p><b>Frame3DD</b> reads a plain-text <b>input data file</b>, containing joint coordinates, frame element geometry, material moduli, fixed joints, prescribed displacements, load information, and optionally, mass information if a modal analysis is to be carried out.
 <!-- (The Input Data file is not a Matlab file.   Values are not input using Matlab matrix notation with square brackets.)-->
 </p>
+
+<!-- 3D frames , 3D frames , 3D frames , 3D frames , 3D frames , 3D frames  -->
 
 <p><b>Frame3DD</b> appends results to a plain-text <b>output data file</b>.
 Results from the most recent analysis
@@ -91,6 +97,7 @@ the terms of the GNU General Public License (GPL) as published by the
 <a href="http://www.fsf.org/">Free Software Foundation</a>.
 The software is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose.  See <a href="../LICENSE.txt">LICENSE.txt</a> for details.
 </p>
+
 <!--
 Free software for static and dynamic structural analysis of 2D
 and 3D frames and trusses with elastic and geometric stiffness.
